# KXemu

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile.old  README.md  TODO.md  init.sh  makefile
cmake/: git_info.cmake  git_info.hpp.in  update_git_info.cmake
configs/: .gitignore  Kconfig
docs/: bugs.md  kdb.md  riscv.md
docs/device/: virtio-blk.md
docs/isa/: loongarch32.md  riscv32.md  riscv64.md
example/use-lib/: Makefile  main.cpp
include/: common.h  debug.h  log.h  macro.h  word.h
include/config/: config.h
include/cpu/: core.h  core.hpp  cpu.h  cpu.hpp  decoder.h  word.h  word.hpp
include/cpu/loongarch/: core.h  cpu.h
include/cpu/loongarch/local-include/: inst-list.h
include/cpu/riscv/: aclint.h  aclint.hpp  addr.h  addr.hpp  cache-def.h  config.hpp  core.h  core.hpp  cpu.h  cpu.hpp  csr-field.h  csr-field.hpp  csr.h  csr.hpp  def.h  def.hpp  namespace.h  plic.h  plic.hpp  pte.h  pte.hpp
include/cpu/riscv/local-include/: inst-list.h  (+1 more)
include/cpu/riscv32/: core.h  cpu.h  csr-def.h  csr.h
include/cpu/riscv64/: core.h  cpu.h
include/device/: bus.h  bus.hpp  def.h  def.hpp  memory.h  mmio.h  mmio.hpp  uart.h  uart.hpp
include/device/virtio/: block.h  block.hpp  def.h  virtio.h  virtio.hpp
include/isa/: isa.h  isa.hpp  word.h
include/isa/riscv/: core.h  cpu.h  isa.h  riscv.h
include/isa/riscv32/: core.h  cpu.h  csr-def.h  csr-flag.h  csr.h  isa.h  privileged-def.h  riscv32.h
include/kdb/: cmd.h  cmd.hpp  config.h  gdb-stub.h  kdb.h  kdb.hpp  rsp.h
include/memory/: map.h  memory.h
include/test_img/: riscv.h
include/utils/: decoder.h  decoder.hpp  disasm.h  gdb-rsp.h  spinlock.h  spinlock.hpp  task-timer.h  task-timer.hpp  tcp-server.h  utils.h  utils.hpp
scripts/: build.mk  config.cmake  config.mk  export.mk  filelist.cmake  filelist.mk  kxemu.cmake  kxemu.mk  libkxemu.cmake
scripts/decoder-gen/: gen.py  instpat.py  main.py
scripts/export/: export.py
scripts/isa/: loongarch.cmake  loongarch.mk  riscv.cmake  riscv.mk
scripts/kdb/: dummy.kdb
scripts/line-counter/: main.py
scripts/loongarch-decoder-gen/: gen.py  instpat.py
scripts/riscv-decoder-gen/: gen.py  instpat.py  main.py  patterndef.py
src/: log.cpp  main.cpp
src/cpu/: bitpat.cpp
src/cpu/loongarch/: core.cpp  cpu.cpp  execute.cpp  memory.cpp
src/cpu/riscv/: aclint.cpp  core.cpp  cpu.cpp  excute.cpp  execute.cpp  icache.cpp  memory.cpp  plic.cpp
src/cpu/riscv32/: core.cpp  cpu.cpp  csr-rw.cpp  csr.cpp  inst-decoder.cpp  inst.cpp  privileged.cpp
src/cpu/riscv64/: cpu.cpp
src/device/: bus.cpp  map.cpp  memory.cpp  uart.cpp
src/device/virtio/: block.cpp  virtio.cpp
src/isa/loongarch/: disassemble.cpp  loongarch.cpp
src/isa/riscv/: core.cpp  cpu.cpp  disassemble.cpp  inst.cpp  riscv.cpp
src/isa/riscv32/: cinst.cpp  core.cpp  cpu.cpp  csr-rw.cpp  csr.cpp  disassemble.cpp  inst-decoder.cpp  inst.cpp  isa.cpp  privileged.cpp  riscv32.cpp
src/kdb/: cmd.cpp  cpu-exec.cpp  device.cpp  elf.cpp  gdb.cpp  kdb.cpp  memory-map.cpp  memory.cpp  uart.cpp
src/kdb/cmd/: cmd.cpp  completion.cpp  dbg.cpp  define.cpp  device.cpp  gdb.cpp  info.cpp  load.cpp  log.cpp  mem.cpp  set.cpp  show.cpp  uart.cpp
src/kdb/rsp/: rsp.cpp
src/memory/: map.cpp  memory.cpp
src/utils/: utils.cpp
src/utils/decoder/: bitpat.cpp
src/utils/disasm/: disasm.cpp
src/utils/gdb-rsp/: gdb-rsp.cpp
src/utils/kdb/: kdb.cpp
src/utils/task-timer/: task-timer.cpp
src/utils/tcp-server/: tcp-server.cpp
src/utils/utils/: utils.cpp
tests/abstract-machine/: Makefile  makefile
tests/abstract-machine/am/: Makefile  makefile
tests/abstract-machine/include/: am.h
tests/abstract-machine/klib/: Makefile  makefile
tests/abstract-machine/scripts/: dummy.kdb  linker.ld  loongarch32r.mk  loongarch64.mk  riscv32.mk  riscv64.mk
tests/abstract-machine/src/: init.c  runmain.c
tests/am-tests/: Makefile  timer.c
tests/benchmarks/microbench/: Makefile  init.kdb
tests/cpu-tests/: .result  Makefile  loop.sh  makefile
tests/cpu-tests/include/: test.h
tests/cpu-tests/tests/: add-longlong.c  add.c  bit.c  bubble-sort.c  crc32.c  div.c  fact.c  fib.c  goldbach.c  hello-str.c  if-else.c  leap-year.c  load-store.c  matrix-mul.c  max.c  mersenne.c  min3.c  mov-c.c  movsx.c  mul-longlong.c  pascal.c  prime.c  quick-sort.c  recursion.c  select-sort.c  shift.c  shuixianhua.c  string.c  sub-longlong.c  sum.c  switch.c  to-lower-case.c  unalign.c  wanshu.c
tests/ioe/: makefile  uart.c  uart.kdb
tests/ioe-tests/: makefile  uart.c
tests/isa/riscv32/: test_img.h
tests/mulitcore/: Makefile
tests/mulitcore/hello/: Makefile
tests/os/: .gitignore  download.sh
tests/privileged-tests/: intr.c  makefile  uart.kdb
tests/riscv/: Makefile  README.md
tests/riscv/basic/: Makefile
tests/riscv/iuart/: iuart.kdb
tests/riscv/opensbi/: Makefile  opensbi.kdb
tests/riscv/xv6-riscv/: Makefile
tests/riscv32/privileged/: makefile  smode.txt  timer.txt
tests/xv6-riscv/: Makefile  kernel.txt  xv6.kdb
tools/kconfig/: .config  Makefile
tools/uart/: uart.py
utils/: CMakeLists.txt
utils/serial/: sender.py
utils/uart/: uart.py
(+110 files in other folders)
